@@ -1,5 +1,8 @@
 2009-01-23  Frank Warmerdam  <warmerdam@pobox.com>
 
+	* libtiff/tif_predict.c: Add support for 32bit integer horz. predictors.
+	http://bugzilla.maptools.org/show_bug.cgi?id=1911
+
 	* libtiff/tif_dirwrite.c: Fix byte swapping of next directory offset.
 	
 	http://bugzilla.maptools.org/show_bug.cgi?id=1924
